--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.14.2",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "nodemailer": "^1.11.0",
+    "serve-favicon": "^2.3.0"
   }
 }
