--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.13.3",
     "morgan": "^1.6.1",
     "nodemailer": "^1.11.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "sitemap": "^1.5.0"
   }
 }
